deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-frontend
  template:
    metadata:
      labels:
        app: platform-frontend
    spec:
      containers:
        - name: platform-frontend
          image: razum0ff/platform-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
