service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: platform-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
